--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "private": true,
   "scripts": {
     "deploy": "wrangler deploy",
-    "dev": "wrangler dev",
-    "start": "wrangler dev",
+    "dev": "wrangler dev --local-upstream davidwbarratt.com --upstream-protocol https",
     "test": "vitest",
     "cf-typegen": "wrangler types"
   },
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.4.5",
     "@cloudflare/workers-types": "^4.20240722.0",
-    "typescript": "^5.5.2",
+    "typescript": "^5.5.4",
     "vitest": "1.5.0",
-    "wrangler": "^3.60.3"
+    "wrangler": "^3.66.0"
   }
 }
