--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,7 +2,7 @@
 name = "cache-tag"
 main = "src/index.ts"
 compatibility_date = "2024-07-22"
-compatibility_flags = ["nodejs_compat"]
+workers_dev = false
 
 # Automatically place your workloads in an optimal location to minimize latency.
 # If you are running back-end logic in a Worker, running it closer to your back-end infrastructure
