--- a/package.json
+++ b/package.json
@@ -1,18 +1,28 @@
 {
-  "name": "cache-tag",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "deploy": "wrangler deploy",
-    "dev": "wrangler dev --local-upstream davidwbarratt.com --upstream-protocol https",
-    "test": "vitest",
-    "cf-typegen": "wrangler types"
-  },
-  "devDependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.4.5",
-    "@cloudflare/workers-types": "^4.20240722.0",
-    "typescript": "^5.5.4",
-    "vitest": "1.5.0",
-    "wrangler": "^3.66.0"
-  }
+	"name": "cache-tag",
+	"version": "0.0.0",
+	"private": true,
+	"scripts": {
+		"deploy": "wrangler deploy",
+		"dev": "wrangler dev --local-upstream davidwbarratt.com --upstream-protocol https",
+		"test": "vitest",
+		"cf-typegen": "wrangler types",
+		"prepare": "husky"
+	},
+	"devDependencies": {
+		"@cloudflare/vitest-pool-workers": "^0.4.5",
+		"@cloudflare/workers-types": "^4.20240722.0",
+		"husky": "^9.1.1",
+		"lint-staged": "^15.2.7",
+		"prettier": "^3.3.3",
+		"typescript": "^5.5.4",
+		"vitest": "^1.5.0",
+		"wrangler": "^3.66.0"
+	},
+	"overrides": {
+		"@types/node": "20.8.3"
+	},
+	"lint-staged": {
+		"**/*": "prettier --write --ignore-unknown"
+	}
 }
