--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
 	"devDependencies": {
 		"@cloudflare/vitest-pool-workers": "^0.4.5",
 		"@cloudflare/workers-types": "^4.20240722.0",
+		"@eslint/js": "^9.7.0",
+		"@types/eslint__js": "^8.42.3",
+		"@types/eslint-config-prettier": "^6.11.3",
+		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^9.1.0",
 		"husky": "^9.1.1",
 		"lint-staged": "^15.2.7",
 		"prettier": "^3.3.3",
 		"typescript": "^5.5.4",
+		"typescript-eslint": "^7.17.0",
 		"vitest": "^1.5.0",
 		"wrangler": "^3.66.0"
 	},
