--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"deploy": "wrangler deploy",
-		"dev": "wrangler dev --local-upstream davidwbarratt.com --upstream-protocol https",
+		"dev": "wrangler dev --local-upstream davidwbarratt.com --upstream-protocol https --remote",
 		"test": "vitest",
 		"cf-typegen": "wrangler types",
 		"prepare": "husky"
