--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,9 @@ name = "cache-tag"
 main = "src/index.ts"
 compatibility_date = "2024-07-22"
 workers_dev = false
+routes = [
+	{ pattern = "davidwbarratt.com/*", zone_name = "davidwbarratt.com" }
+]
 
 # Automatically place your workloads in an optimal location to minimize latency.
 # If you are running back-end logic in a Worker, running it closer to your back-end infrastructure
