--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,13 @@
 #:schema node_modules/wrangler/config-schema.json
 name = "cache-tag"
 main = "src/index.ts"
-compatibility_date = "2024-07-22"
+compatibility_date = "2024-07-18"
 workers_dev = false
 routes = [
 	{ pattern = "davidwbarratt.com/*", zone_name = "davidwbarratt.com" }
+]
+rules = [
+  { type = "Text", globs = ["**/*.csv"], fallthrough = true }
 ]
 
 # Automatically place your workloads in an optimal location to minimize latency.
@@ -83,9 +86,9 @@ routes = [
 
 # Bind a Queue producer. Use this binding to schedule an arbitrary task that may be processed later by a Queue consumer.
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#queues
-# [[queues.producers]]
-# binding = "MY_QUEUE"
-# queue = "my-queue"
+[[queues.producers]]
+binding = "CACHE_CAPTURE"
+queue = "cache-capture"
 
 # Bind a Queue consumer. Queue Consumers can retrieve tasks scheduled by Producers to act on them.
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#queues
