--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,7 @@ name = "cache-tag"
 main = "src/index.ts"
 compatibility_date = "2024-07-18"
 workers_dev = false
+compatibility_flags = [ "nodejs_compat" ]
 routes = [
 	{ pattern = "davidwbarratt.com/*", zone_name = "davidwbarratt.com" }
 ]
