--- a/workers/consumer/package.json
+++ b/workers/consumer/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "producer",
+	"name": "consumer",
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
@@ -20,8 +20,5 @@
 		"typescript-eslint": "^7.17.0",
 		"vitest": "^1.6.0",
 		"wrangler": "^3.67.1"
-	},
-	"dependencies": {
-		"tracking-query-params-registry": "github:mpchadwick/tracking-query-params-registry"
 	}
 }
