--- a/workers/producer/package.json
+++ b/workers/producer/package.json
@@ -9,17 +9,17 @@
 		"cf-typegen": "wrangler types"
 	},
 	"devDependencies": {
-		"@cloudflare/vitest-pool-workers": "~0.4.16",
+		"@cloudflare/vitest-pool-workers": "^0.4.16",
 		"@cloudflare/workers-types": "^4.20240725.0",
 		"@eslint/js": "^9.8.0",
 		"@types/eslint-config-prettier": "^6.11.3",
 		"@types/eslint__js": "^8.42.3",
-		"@vitest/runner": "^1.5.0",
-		"@vitest/snapshot": "^1.5.0",
+		"@vitest/runner": "~1.5.3",
+		"@vitest/snapshot": "~1.5.3",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"typescript": "^5.5.4",
-		"typescript-eslint": "^7.17.0",
+		"typescript-eslint": "^7.18.0",
 		"vitest": "~1.5.3",
 		"wrangler": "^3.67.1"
 	},
