--- a/workers/consumer/package.json
+++ b/workers/consumer/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"deploy": "wrangler deploy",
 		"dev": "wrangler dev --local-upstream davidwbarratt.com --upstream-protocol https --remote",
-		"test": "vitest",
+		"test": "vitest run",
 		"cf-typegen": "wrangler types"
 	},
 	"devDependencies": {
@@ -22,5 +22,8 @@
 		"typescript-eslint": "^7.18.0",
 		"vitest": "~1.5.3",
 		"wrangler": "^3.67.1"
+	},
+	"dependencies": {
+		"zod": "^3.23.8"
 	}
 }
