--- a/workers/handler/wrangler.toml
+++ b/workers/handler/wrangler.toml
@@ -1,12 +1,9 @@
 #:schema node_modules/wrangler/config-schema.json
-name = "cache-tag"
+name = "cache-tag-handler"
 main = "src/index.ts"
 compatibility_date = "2024-07-18"
 workers_dev = false
 compatibility_flags = [ "nodejs_compat" ]
-routes = [
-	{ pattern = "davidwbarratt.com/*", zone_name = "davidwbarratt.com" }
-]
 
 # Automatically place your workloads in an optimal location to minimize latency.
 # If you are running back-end logic in a Worker, running it closer to your back-end infrastructure
