--- a/workers/watcher/package.json
+++ b/workers/watcher/package.json
@@ -24,6 +24,7 @@
 		"wrangler": "^3.67.1"
 	},
 	"dependencies": {
-		"tracking-query-params-registry": "github:mpchadwick/tracking-query-params-registry"
+		"tracking-query-params-registry": "github:mpchadwick/tracking-query-params-registry",
+		"zod": "^3.23.8"
 	}
 }
