--- a/workers/controller/wrangler.toml
+++ b/workers/controller/wrangler.toml
@@ -1,15 +1,9 @@
 #:schema node_modules/wrangler/config-schema.json
-name = "cache-tag-watcher"
+name = "cache-tag"
 main = "src/index.ts"
 compatibility_date = "2024-07-18"
-workers_dev = false
+workers_dev = true
 compatibility_flags = [ "nodejs_compat" ]
-routes = [
-	{ pattern = "davidwbarratt.com/*", zone_name = "davidwbarratt.com" }
-]
-rules = [
-  { type = "Text", globs = ["**/*.csv"], fallthrough = true }
-]
 
 # Automatically place your workloads in an optimal location to minimize latency.
 # If you are running back-end logic in a Worker, running it closer to your back-end infrastructure
@@ -87,13 +81,13 @@ rules = [
 
 # Bind a Queue producer. Use this binding to schedule an arbitrary task that may be processed later by a Queue consumer.
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#queues
-# [[queues.producers]]
-# binding = "CACHE_CAPTURE"
-# queue = "cache-capture"
+[[queues.producers]]
+binding = "CACHE_CAPTURE"
+queue = "cache-capture"
 
-# [[queues.producers]]
-# binding = "CACHE_PURGE_TAG"
-# queue = "cache-purge-tag"
+[[queues.producers]]
+binding = "CACHE_PURGE_TAG"
+queue = "cache-purge-tag"
 
 # Bind a Queue consumer. Queue Consumers can retrieve tasks scheduled by Producers to act on them.
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#queues
@@ -108,9 +102,9 @@ rules = [
 
 # Bind another Worker service. Use this binding to call another Worker without network overhead.
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
-[[services]]
-binding = "CACHE_CONTROLLER"
-service = "cache-tag"
+# [[services]]
+# binding = "MY_SERVICE"
+# service = "my-service"
 
 # Bind a Vectorize index. Use to store and query vector embeddings for semantic search, classification and other vector search use-cases.
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#vectorize-indexes
