--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
 	"description": "Cache Tag Cloudflare Workers",
 	"license": "AGPL-3.0-or-later",
 	"scripts": {
-		"prepare": "husky"
+		"prepare": "husky",
+		"test": "turbo test",
+		"cf-typegen": "turbo cf-typegen",
+		"typecheck": "turbo typecheck"
 	},
 	"devDependencies": {
 		"husky": "^9.1.4",
 		"lint-staged": "^15.2.7",
-		"prettier": "^3.3.3"
+		"prettier": "^3.3.3",
+		"turbo": "^2.0.12"
 	},
 	"lint-staged": {
 		"**/*": "prettier --write --ignore-unknown"
-	}
+	},
+	"packageManager": "pnpm@9.7.0"
 }
