--- a/workers/watcher/package.json
+++ b/workers/watcher/package.json
@@ -7,7 +7,8 @@
 		"dev": "wrangler dev --local-upstream davidwbarratt.com --upstream-protocol https --remote",
 		"test": "vitest run",
 		"cf-typegen": "wrangler types",
-		"typecheck": "tsc"
+		"typecheck": "tsc",
+		"lint": "eslint ."
 	},
 	"devDependencies": {
 		"@cloudflare/vitest-pool-workers": "^0.4.16",
