--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v4
         with:
-          node-version: "lts"
+          node-version: "lts/*"
           cache: "pnpm"
       - run: pnpm install -r
       - run: pnpm typecheck
