--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,7 @@ jobs:
         with:
           node-version: "lts/*"
           cache: "pnpm"
+      - uses: pnpm/action-setup@v4
       - run: pnpm install -r
       - run: pnpm typecheck
       - run: pnpm lint
