--- a/workers/watcher/package.json
+++ b/workers/watcher/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "deploy": "wrangler deploy",
     "dev": "wrangler dev --local-upstream davidwbarratt.com --upstream-protocol https --remote",
+    "test": "vitest run",
     "cf-typegen": "wrangler types",
     "typecheck": "tsc",
     "lint": "eslint .",
     "tail": "wrangler tail"
   },
   "devDependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.4.26",
+    "@cloudflare/vitest-pool-workers": "^0.4.27",
     "@cloudflare/workers-types": "^4.20240821.1",
     "@eslint/js": "^9.9.1",
     "@types/eslint-config-prettier": "^6.11.3",
@@ -23,7 +24,7 @@
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.3.0",
     "vitest": "~1.5.3",
-    "wrangler": "^3.72.3"
+    "wrangler": "^3.73.0"
   },
   "dependencies": {
     "tracking-query-params-registry": "github:mpchadwick/tracking-query-params-registry"
